@@ -1,10 +1,19 @@
 #!/usr/bin/env python
+"""
+Test method det.ndarray_from_image(rnum, image):
+
+1. get cspad n-d array of mask with shape:(32, 185, 388)
+2. create image from n-d array of mask with shape:(1731, 1738)
+3. convert image back to n-d array using method det.ndarray_from_image
+4. compare initial and final n-d arrays
+"""
 
 import sys
 import psana
 from time import time
 from Detector.AreaDetector import AreaDetector
-from Detector.GlobalUtils import print_ndarr, table_from_cspad_ndarr
+from pyimgalgos.GlobalUtils import print_ndarr, table_from_cspad_ndarr, cspad_ndarr_from_table
+#from Detector.GlobalUtils import print_ndarr, table_from_cspad_ndarr, cspad_ndarr_from_table
 
 ##-----------------------------
 
@@ -28,8 +37,8 @@ rnum = evt.run()
 ##-----------------------------
 
 det = AreaDetector(src, env, pbits=0)
-#det.print_attributes()
-mask = det.mask(evt, calib=True, status=True, edges=True, central=True, unbond=True, unbondnbrs=True)
+det.print_attributes()
+mask = det.mask(evt, calib=True, status=True, edges=True, central=True, unbond=True, unbondnbrs=True) #, unbondnbrs8=True)
 print_ndarr(mask, 'input n-d array of mask')
 
 ##-----------------------------
@@ -39,13 +48,28 @@ print_ndarr(image, 'image from mask n-d array')
 
 ##-----------------------------
 
+t0_sec = time()
 nda = det.ndarray_from_image(rnum, image)
+print 'det.ndarray_from_image consumed time %.6f sec' % (time()-t0_sec)
 print_ndarr(nda, 'n-d array of mask retreived from image')
 
 ##-----------------------------
 
+t0_sec = time()
 tmask0 = table_from_cspad_ndarr(mask)
+print 'table creation time %.6f sec' % (time()-t0_sec)
 tmask1 = table_from_cspad_ndarr(nda)
+print_ndarr(tmask0, 'table  of mask0')
+
+##-----------------------------
+
+t0_sec = time()
+nda_cspad = cspad_ndarr_from_table(tmask0)
+print_ndarr(nda_cspad, 'cspad_ndarr_from_table')
+print 'cspad_ndarr_from_table consumed time %.6f sec' % (time()-t0_sec)
+nda_cspad.shape = (32*185,388)
+
+##-----------------------------
 
 import pyimgalgos.GlobalGraphics as gg
 
@@ -56,6 +80,7 @@ d = (-1,2)
 gg.plotImageLarge(tmask0, amp_range=d, title='input n-d array of mask')
 gg.plotImageLarge(tmask1, amp_range=d, title='n-d array of mask retreived from image')
 gg.plotImageLarge(tmask1-tmask1, amp_range=d, title='difference between input and reconstructed from image n-d arrays')
+gg.plotImageLarge(nda_cspad, amp_range=d, title='test cspad_ndarr_from_table')
 
 gg.show()
 
