@@ -9,26 +9,21 @@
 
 """Contains Global Utilities
 
-This software was developed for the SIT project.  If you use all or 
-part of it, please give an appropriate acknowledgment.
-
-@see RelatedModule
+This software was developed for the SIT project.
+If you use all or part of it, please give an appropriate acknowledgment.
 
 @version $Id$
 
 @author Mikhail S. Dubrovin
 """
 
-#------------------------------
-#  Module's version from SVN --
-#------------------------------
+#--------------------------------
 __version__ = "$Revision$"
-# $Source$
+#--------------------------------
 
-#--------------------------------
-#  Imports of standard modules --
-#--------------------------------
 import numpy as np
+
+#------------------------------
 
 def print_ndarr(nda, name='', first=0, last=5) :
     if nda is None : print '%s: %s' % (name, nda)
@@ -41,17 +36,6 @@ def print_ndarr(nda, name='', first=0, last=5) :
 
 #------------------------------
 
-def table_from_cspad_ndarr(nda_cspad) :
-    """returns table of 2x1s shaped as (8*185, 4*388) in style of Cheetah
-       generated from cspad array with size=(32*185*388) ordered as in data, shape does not matter. 
-    """
-    quads, nsegq, rows, cols = 4, 8, 185, 388
-    nda = np.array(nda_cspad)
-    nda.shape = (quads, nsegq, rows, cols)
-    return np.hstack([np.vstack([nda[q,s,:] for s in range(nsegq)]) for q in range(quads)])
-
-#------------------------------
-
 def divide_protected(num, den, vsub_zero=0) :
     """Returns result of devision of numpy arrays num/den with substitution of value vsub_zero for zero den elements.
     """
@@ -60,4 +44,4 @@ def divide_protected(num, den, vsub_zero=0) :
     return pro_num / pro_den
 
 #------------------------------
-#------------------------------
+
